# RevivalBCPL

./: .gitignore  AArch64Instructions.cpp  AArch64Instructions.h  ABI.md  ARM-Cintcode Table .csv  AST.cpp  AST.h  ASTNodes.h  ASTVisitor.cpp  ASTVisitor.h  BCPL Runtime.md  BCPL char and string.md  BCPL float extension.md  BCPL on ARM execution model.md  BCPL syntax.md  BasicBlock.cpp  BasicBlock.h  CFGBuilder.cpp  CFGBuilder.h  CMakeCache.txt  CMakeLists.txt  CodeGenerator.cpp  CodeGenerator.cpp.backup  CodeGenerator.h  CommonSubexpressionEliminationPass.cpp  CommonSubexpressionEliminationPass.h  ConstantFoldingPass.cpp  ConstantFoldingPass.h  DeadCodeEliminationPass.cpp  DeadCodeEliminationPass.h  DebugPrinter.cpp  DebugPrinter.h  ExpressionCodeGenerator.cpp  ExpressionCodeGenerator.h  ExpressionLivenessVisitor.cpp  ExpressionLivenessVisitor.h  FunctionInliningPass.cpp  FunctionInliningPass.h  JITMemoryManager.cpp  JITMemoryManager.h  (+64 more)
tests/: libhdr  test.b  test.s  test10.b  test10.s  test11.b  test11.s  test12.b  test12.s  test14.b  test14.s  test15.b  test15.s  test16.b  test16.s  test17.b  test17.s  test18.b  test18.s  test19.b  test19.s  test19_new.s  test2.b  test20.b  test20.s  test21.b  test21.s  test22.b  test22.s  test23.b  test23.s  test3.bcpl  test3_new.s  test3_reverted_again.s  test4.bcpl  test4.s  test4_new.s  test5.bcpl  test5.s  test6.bcpl  (+28 more)
